change file name and path in room1 HTML

--- a/page_room1.html
+++ b/page_room1.html
@@ -114,7 +114,7 @@
         <h4 id="roomPrice">$99 AUD</h4><p>per night</p>
         <input id= "setRoomPrice" type="number" name="" value="99">
       </div>
-      <form id="guestForm" action="page_bookingCompleted.html" onsubmit="return(getName() && getPhone() && dateCheck())" method="post">
+      <form id="guestForm" action="page_booking-completed.html" onsubmit="return(getName() && getPhone() && dateCheck())" method="post">
         <div>
           <label>Name:</label>
           <input id="inputName" type="text" name="guestName" onblur="getName()">
