--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Welcome to White Space!" />
+    <meta property="og:description" content="Enjoy your day in White Space!" />
+    <meta property="og:image" content="https://heatherori.github.io/hotel-reservation/main/image/room4/photo-1519974719765-e6559eac2575.jpeg" />
+    <meta property="og:url" content="https://heatherori.github.io/hotel-reservation/" />
     <!-- jQuery -->
     <link rel="stylesheet" href="CSS/jquery-ui.css">
     <!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
